--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 	<script type="text/javascript" src="angular-cookies.js"></script>
 	
 	<script type="text/javascript">
-		var app = angular.module('mittens',['ngRoute']);
+		var app = angular.module('mittens',['ngRoute','ngCookies']);
 
 app.config(function($routeProvider, $locationProvider) {
 	$routeProvider
@@ -23,7 +23,15 @@ app.config(function($routeProvider, $locationProvider) {
 });   
   });
 
-app.controller('HomeController', function($scope,$http){	
+app.run(function($rootScope,$cookies){
+	if($cookies.get('token')&& $cookies.get('currentUser')){
+		$rootScope.token=$cookies.get('token');
+		$rootScope.currentUser=$cookies.get('currentUser');
+	}
+
+});
+
+app.controller('HomeController', function($rootScope,$scope,$http,$cookies){	
 	function getMeows(){
 			$http.get('/meows').then(function(responce){
 					$scope.meows=responce.data;
@@ -43,12 +51,51 @@ app.controller('HomeController', function($scope,$http){
 				getMeows();
 			});
 		};
-	
+// 	$scope.signin=function(){
+// 		$http.put('/users/signin',{ username: $scope.username,password: $scope.password})
+// 		.then(function(res){
+// 			$cookies.put('token',res.data.token);
+// 			$scope.currentUser=$scope.username;
+// 		alert('successfully signed in');
+// 		}, function(err){
+// 		alert('Bad login credentials');
+// 	});
+// };
+
+$scope.signin=function(){
+	$http.put('/users/signin',{ username: $scope.username,password: $scope.password})
+	.then(function(res){
+		$cookies.put('token',res.data.token);
+		$cookies.put('currentUser',$scope.username);
+		$rootScope.token=res.data.token;
+		$rootScope.currentUser=$scope.username;
+		alert('successfully signed in');
+	}, function(err){
+		alert('Bad login credentials');
+	});
+};
+		
+$scope.logout=function(){
+     $cookies.remove('token');
+	$cookies.remove('currentUser');
+	$rootScope.token=null;
+	$rootScope.currentUser=null;
+};
+
 });
 
 
 app.controller('SignupController', function($scope,$http){
-	
+	$scope.submitSignup=function(){
+	var newUser= {
+		username: $scope.username,
+		password: $scope.password
+		};		
+		$http.post('/users',newUser).then(function(){
+				alert('Success');
+		});
+	};	
+
 	console.log('You are on the Signup Page');
 });
 	</script>
